--- a/PIP/PIP-0038.md
+++ b/PIP/PIP-0038.md
@@ -5,7 +5,7 @@
   Author: Preben Björn Biermann Madsen (nightraven) <natugle@gmail.com>
   Comments-URI: https://discordapp.com/channels/@me
   Status: Draft
-  Created: 2019-10-??
+  Created: 2019-10-23
 </pre>
 
 ## Summary
@@ -27,15 +27,10 @@ The wallet already has an option for sending and receiving messages. It is this 
 Each message consists of a record:
 <pre>
   TMsg = record
-
     MsgId: MD5hash; // of a big random number
-
     Target: MD5hash; // Target can be a hash of a nick, an account or a message channel
-
     PayloadLen: Byte; // length of payload
-
     Payload: Ansistring; // the message or data to be broadcasted
-
   end;
 </pre>
 
